# cells

./: .gitignore  DOCUMENTATION  README  bots.example.toml  cells.py  cells_helpers.pyx  config.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tournament.py
.claude/commands/: standup.md
.github/workflows/: ci.yml
terrain/: generator.py
tests/: _messaging_mind_fixture.py  test_async_engine.py  test_batch_protocol.py  test_bot_config.py  test_cli.py  test_cython_helper.py  test_display.py  test_engine.py  test_http_mind.py  test_in_process_server.py  test_mcp_mind.py  test_minds.py  test_strikes.py  test_terrain_generator.py  test_tournament.py  test_worldview_snapshot.py
transports/: __init__.py  http_mind.py  in_process_server.py  mcp_mind.py
